--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ crash.log
 
 ## Google Creds
 fuchicorp-service-account.json
+*.json
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
